--- a/cometride-server/pom.xml
+++ b/cometride-server/pom.xml
@@ -36,6 +36,16 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.9</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.34</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.jaxrs</groupId>
+            <artifactId>jackson-jaxrs-json-provider</artifactId>
+            <version>2.5.1</version>
+        </dependency>
     </dependencies>
 
     <build>
