--- a/cometride-riderapp/CometRider/bin/AndroidManifest.xml
+++ b/cometride-riderapp/CometRider/bin/AndroidManifest.xml
@@ -24,20 +24,31 @@
         android:required="true"/>
 
     
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.utd.cometrider.ui.DisplayMapActivity"
-            android:label="@string/app_name" >
+            android:name="com.utd.cometrider.ui.SplashScreen"
+            android:label="@string/app_name" 
+             android:screenOrientation="portrait"
+              android:theme="@android:style/Theme.Light.NoTitleBar">
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+         <!-- Main activity -->
+        <activity
+            android:name="com.utd.cometrider.ui.DisplayMapActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
         
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
