--- a/cometride-server/pom.xml
+++ b/cometride-server/pom.xml
@@ -69,6 +69,19 @@
                     <configuration>
                         <properties>
                             <cargo.servlet.port>8080</cargo.servlet.port>
+                            <cargo.servlet.users>
+                                test:test:cometride-admin
+                            </cargo.servlet.users>
+                            <!--
+                            <cargo.servlet.port>8443</cargo.servlet.port>
+                            <cargo.protocol>https</cargo.protocol>
+                            <cargo.tomcat.connector.clientAuth>false</cargo.tomcat.connector.clientAuth>
+                            <cargo.tomcat.connector.sslProtocol>TLS</cargo.tomcat.connector.sslProtocol>
+                            <cargo.tomcat.connector.keystoreFile>C:\Users\matt lautz\.keystore</cargo.tomcat.connector.keystoreFile>
+                            <cargo.tomcat.connector.keystorePass>cometrideKey</cargo.tomcat.connector.keystorePass>
+                            <cargo.tomcat.connector.keyAlias>cometride</cargo.tomcat.connector.keyAlias>
+                            <cargo.tomcat.httpSecure>true</cargo.tomcat.httpSecure>
+                            -->
                         </properties>
                     </configuration>
                 </configuration>
