--- a/cometride-server/pom.xml
+++ b/cometride-server/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>jackson-jaxrs-json-provider</artifactId>
             <version>2.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.tuckey</groupId>
+            <artifactId>urlrewritefilter</artifactId>
+            <version>4.0.3</version>
+        </dependency>
     </dependencies>
 
     <build>
