--- a/cometride-driverapp/DA/app/src/main/AndroidManifest.xml
+++ b/cometride-driverapp/DA/app/src/main/AndroidManifest.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    android:screenOrientation="portrait"
-    package="com.UTD.driverapp" >
+    package="com.UTD.driverapp"
+    android:screenOrientation="portrait" >
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.UTD.driverapp.MainActivity"
-            android:label="@string/app_name" >
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,17 +29,28 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.UTD.driverapp.Options"
-            android:label="@string/title_activity_options" >
+            android:name=".Options"
+            android:label="@string/title_activity_options"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
         </activity>
         <activity
-            android:name="com.UTD.driverapp.Driver"
-            android:label="@string/title_activity_driver" >
+            android:name=".Driver"
+            android:label="@string/title_activity_driver"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
         </activity>
         <activity
-            android:name="com.UTD.driverapp.Driver2"
-            android:label="@string/title_activity_driver2" >
+            android:name=".Driver2"
+            android:label="@string/title_activity_driver2"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
         </activity>
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
     </application>
 
 </manifest>
