--- a/cometride-server/src/main/webapp/WEB-INF/web.xml
+++ b/cometride-server/src/main/webapp/WEB-INF/web.xml
@@ -54,10 +54,32 @@
         </user-data-constraint>
     </security-constraint>
 
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>Restrict Admin Pages / API to Admin Role</web-resource-name>
+            <url-pattern>/api/driver</url-pattern>
+            <url-pattern>/api/driver/*</url-pattern>
+            <http-method>GET</http-method>
+            <http-method>POST</http-method>
+            <http-method>PUT</http-method>
+        </web-resource-collection>
+
+        <auth-constraint>
+            <role-name>cometride-admin</role-name>
+            <role-name>cometride-driver</role-name>
+        </auth-constraint>
+
+        <user-data-constraint>
+            <!-- transport-guarantee can be CONFIDENTIAL, INTEGRAL, or NONE -->
+            <transport-guarantee>NONE</transport-guarantee>
+        </user-data-constraint>
+    </security-constraint>
+
     <login-config>
         <auth-method>FORM</auth-method>
         <form-login-config>
             <form-login-page>/login.html</form-login-page>
+            <error-code>404</error-code>
             <form-error-page>/login-failed.html</form-error-page>
         </form-login-config>
     </login-config>
