--- a/cometride-riderapp/CometRider/AndroidManifest.xml
+++ b/cometride-riderapp/CometRider/AndroidManifest.xml
@@ -34,7 +34,8 @@
             android:name="com.utd.cometrider.ui.SplashScreen"
             android:label="@string/app_name" 
              android:screenOrientation="portrait"
-              android:theme="@android:style/Theme.Light.NoTitleBar">
+              android:theme="@android:style/Theme.Light.NoTitleBar"
+              android:configChanges="orientation">
             
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -46,7 +47,9 @@
          <!-- Main activity -->
         <activity
             android:name="com.utd.cometrider.ui.DisplayMapActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+             android:configChanges="orientation"
+             android:screenOrientation="portrait">
         </activity>
         
         
